# dlvm

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  interp.cpp  main.c  main.cpp  meson.build  opcode.hpp  type.cpp  type.hpp  vm.cpp  vm.hpp
include/: exceptions.h  gc.h  interp.h  interpreter.hpp  mem.hpp  meson.build  module.hpp  native.hpp  opcode.hpp  opcodes.h  posix.hpp  type.hpp  types.h  utf8.h  vm.h  vmm.hpp  windows.hpp
src/: CMakeLists.txt  error.hpp  function.cpp  function.hpp  gc.c  gc.h  interp.c  interp.cpp  interp.h  interp.rs  interpreter.cpp  interpreter.hpp  main.cpp  main.rs  mem.cpp  mem.hpp  meson.build  module.cpp  module_parser.cpp  module_parser.hpp  native.cpp  native.hpp  opcode.hpp  opcode.rs  opcodes.h  ttype.rs  type.cpp  type.hpp  types.c  types.h  utf8.c  vm.c  vm.cpp  vm.h  vm.hpp  vm.rs  vm_handler.rs  vmm.cpp  vmm.hpp
